--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -207,54 +207,54 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="activate_status_desc_getting_sim_info_fail">Impossibile ottenere informazioni sulla carta SIM</string>
     <string name="sim_unactivated_title">La carta SIM non è stata associata</string>
     <string name="activate_popup_title_manual">Associa carta SIM</string>
-    <string name="activate_popup_desc_sim_card">An activation text will be sent to bind your SIM card with your account and enable %s. You may incur regular fees from your mobile service provider.</string>
-    <string name="activate_popup_desc_intl_sim_card">An activation text will be sent to bind your SIM card with your account and enable %s. You may incur additional fees from your mobile service provider.</string>
-    <string name="activate_popup_desc_mixed_sim_cards">2 activation messages will be sent to enable %s. You may incur additional fees from your mobile service provider.</string>
-    <string name="activate_popup_desc_2_sim_cards">2 activation messages will be sent to enable %s. You may incur fees from your mobile service provider.</string>
-    <string name="activate_popup_desc_2_intl_sim_cards">2 activation messages will be sent to enable %s. You may incur additional fees from your mobile service provider.</string>
-    <string name="activate_popup_desc_sim_card_downlink">To enable %s, enter your phone number</string>
-    <string name="activate_popup_title_new_sim_card">New SIM Card detected</string>
-    <string name="activate_popup_desc_new_sim_card">"Looks like you've switched SIM cards. An activation message will be sent to enable %s. You may incur regular fees from your mobile service provider."</string>
-    <string name="activate_popup_desc_new_intl_sim_card">"Looks like you've switched SIM cards. 2 activation messages will be sent to enable %s. You may incur additional fees from your mobile service provider."</string>
-    <string name="activate_popup_desc_new_mixed_sim_cards">"Looks like you've switched SIM cards. 2 activation messages will be sent to enable %s. You may incur additional fees from your mobile service provider."</string>
-    <string name="activate_popup_desc_new_2_sim_cards">"Looks like you've switched SIM cards. 2 activation messages will be sent to enable %s. You may incur regular fees from your mobile service provider."</string>
-    <string name="activate_popup_desc_new_2_intl_sim_cards">"Looks like you've switched SIM cards. 2 activation messages will be sent to enable %s. You may incur additional fees from your mobile service provider."</string>
-    <string name="activate_popup_desc_new_sim_card_downlink">"Looks like you've switched SIM cards. Enter the phone number associated with your new SIM card to enable %s"</string>
-    <string name="activate_popup_title_register_account">Bind SIM card</string>
-    <string name="activate_popup_desc_register_account">An SMS will be sent to activate your Mi Account</string>
-    <string name="activate_popup_desc_register_account_intl">An international SMS message will be sent to activate your Mi Account</string>
-    <string name="activate_popup_desc_register_account_downlink">Enter your phone number</string>
-    <string name="activate_popup_title_failed_send_sms">"Can't send SMS"</string>
-    <string name="activate_popup_desc_failed_send_sms">"Couldn't send activation message. Make sure that your SIM card has been activated."</string>
-    <string name="activate_popup_confirm_failed_send_sms">Retry</string>
-    <string name="activate_popup_title_failed_query_info">"Can't find number"</string>
-    <string name="activate_popup_desc_failed_query_info">"Can't find your phone number. Make sure that your SIM card has been activated."</string>
-    <string name="activate_popup_confirm_failed_query_info">Retry</string>
-    <string name="activate_popup_title_failed_server">Server error</string>
-    <string name="activate_popup_desc_failed_server">Check your data connection and try again.</string>
-    <string name="activate_popup_confirm_failed_server">Retry</string>
-    <string name="activate_popup_title_failed_receive_sms">No reply</string>
-    <string name="activate_popup_desc_failed_receive_sms">Make sure the phone number you entered is correct and that your SIM card has been activiated.</string>
-    <string name="activate_popup_confirm_failed_receive_sms">Retry</string>
-    <string name="activate_popup_title_failed_phone_error">Invalid phone number</string>
-    <string name="activate_popup_desc_failed_phone_error">The phone number your entered is invalid.</string>
-    <string name="activate_popup_confirm_failed_phone_error">Retry</string>
-    <string name="activate_feature_mx">Free cloud messaging</string>
-    <string name="activate_feature_mms_sync">SMS sync</string>
-    <string name="activate_feature_call_log_sync">Call log sync</string>
-    <string name="activate_feature_find_device">Find device</string>
-    <string name="activate_desc_sim_card">An SMS will be sent to activate your SIM card</string>
-    <string name="activate_desc_intl_sim_card">An international SMS will be sent to activate your SIM card</string>
-    <string name="activate_desc_mixed_sim_cards">An SMS and an international SMS will be sent to activate 2 SIM cards</string>
-    <string name="activate_desc_2_sim_cards">2 SMS will be sent to activate SIM cards</string>
-    <string name="activate_desc_2_intl_sim_cards">2 international SMS will be sent to activate SIM cards</string>
-    <string name="checking_input">Checking input…</string>
-    <string name="wipe_data_dialog_title">"Some items haven't been synced"</string>
-    <string name="wipe_data_dialog_msg">%s items will be lost if you continue.</string>
-    <string name="dirty_contacts_count">%d contacts</string>
-    <string name="dirty_mms_count">%d messages</string>
-    <string name="dirty_note_count">%d notes</string>
-    <string name="dirty_image_count">%d photos</string>
+    <string name="activate_popup_desc_sim_card">Verrà inviato un SMS per associare la tua carta SIM al tuo account e abilitare %s. Questo comporta i normali costi previsti dal tuo operatore.</string>
+    <string name="activate_popup_desc_intl_sim_card">Verrà inviato un SMS per associare la tua carta SIM al tuo account e abilitare %s. Questo può comportare un costo extra come previsto dal tuo operatore.</string>
+    <string name="activate_popup_desc_mixed_sim_cards">Verranno inviati 2 SMS di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore.</string>
+    <string name="activate_popup_desc_2_sim_cards">Verranno inviati 2 SMS di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore.</string>
+    <string name="activate_popup_desc_2_intl_sim_cards">Verranno inviati 2 SMS di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore.</string>
+    <string name="activate_popup_desc_sim_card_downlink">Per abilitare %s, inserisci il tuo numero di telefono</string>
+    <string name="activate_popup_title_new_sim_card">Rilevata un nuova carta SIM</string>
+    <string name="activate_popup_desc_new_sim_card">"Sembra che tu abbiamo cambiato carta SIM. Verrà inviato un sms di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore."</string>
+    <string name="activate_popup_desc_new_intl_sim_card">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore."</string>
+    <string name="activate_popup_desc_new_mixed_sim_cards">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore."</string>
+    <string name="activate_popup_desc_new_2_sim_cards">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore."</string>
+    <string name="activate_popup_desc_new_2_intl_sim_cards">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore."</string>
+    <string name="activate_popup_desc_new_sim_card_downlink">"Sembra che tu abbiamo cambiato carta SIM. Inserisci il numero di telefono associato alla tua nuova carta SIM per abilitare %s"</string>
+    <string name="activate_popup_title_register_account">Associa carta SIM</string>
+    <string name="activate_popup_desc_register_account">Verrà inviato un SMS per attivare il tuo account MI</string>
+    <string name="activate_popup_desc_register_account_intl">Verrà inviato un SMS internazionale per attivare il tuo account MI</string>
+    <string name="activate_popup_desc_register_account_downlink">Inserisci il tuo numero di telefono</string>
+    <string name="activate_popup_title_failed_send_sms">"Impossibile inviare l'SMS"</string>
+    <string name="activate_popup_desc_failed_send_sms">"Impossibile inviare l'SMS di attivazione. Assicurati che la tua carta SIM sia già attiva."</string>
+    <string name="activate_popup_confirm_failed_send_sms">Riprova</string>
+    <string name="activate_popup_title_failed_query_info">Impossibile trovare il numero</string>
+    <string name="activate_popup_desc_failed_query_info">Impossibile trovare il numero di telefono. Assicurati che la tua carta SIM sia già attiva.</string>
+    <string name="activate_popup_confirm_failed_query_info">Riprova</string>
+    <string name="activate_popup_title_failed_server">Errore lato server</string>
+    <string name="activate_popup_desc_failed_server">Verifica la tua connessione dati e riprova.</string>
+    <string name="activate_popup_confirm_failed_server">Riprova</string>
+    <string name="activate_popup_title_failed_receive_sms">Nessuna risposta</string>
+    <string name="activate_popup_desc_failed_receive_sms">Assicurati che il numero di telefono che hai immesso sia corretto e che la tua carta SIM sia già attiva.</string>
+    <string name="activate_popup_confirm_failed_receive_sms">Riprova</string>
+    <string name="activate_popup_title_failed_phone_error">Numero di telefono non valido</string>
+    <string name="activate_popup_desc_failed_phone_error">Il numero di telefono che hai immesso non è valido.</string>
+    <string name="activate_popup_confirm_failed_phone_error">Riprova</string>
+    <string name="activate_feature_mx">Messaggi gratis tramite cloud</string>
+    <string name="activate_feature_mms_sync">Sincronizzazione SMS</string>
+    <string name="activate_feature_call_log_sync">Sincronizzazione registro chiamate</string>
+    <string name="activate_feature_find_device">Trova dispositivo</string>
+    <string name="activate_desc_sim_card">Verrà inviato un SMS per attivare la tua carta SIM</string>
+    <string name="activate_desc_intl_sim_card">Verrà inviato un SMS internazionale per attivare la tua carta SIM</string>
+    <string name="activate_desc_mixed_sim_cards">Verranno inviati un SMS norale e un SMS internazionale per attivare le due carte SIM</string>
+    <string name="activate_desc_2_sim_cards">Verranno inviati 2 SMS per attivare le carte SIM</string>
+    <string name="activate_desc_2_intl_sim_cards">Verranno inviati 2 SMS internazionali per attivare le carte SIM</string>
+    <string name="checking_input">Verifica dati immessi…</string>
+    <string name="wipe_data_dialog_title">"Alcuni contenuti non sono stati sincronizzati"</string>
+    <string name="wipe_data_dialog_msg">%s contenuti saranno persi se prosegui.</string>
+    <string name="dirty_contacts_count">%d contatti</string>
+    <string name="dirty_mms_count">%d messaggi</string>
+    <string name="dirty_note_count">%d note</string>
+    <string name="dirty_image_count">%d foto</string>
     <string name="wipe_data_dialog_msg_separator">, </string>
     <string name="micloud_none">Nessuno</string>
     <string name="micloud_data_loading">Caricamento</string>
@@ -265,7 +265,7 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="micloud_user_phone">Telefono</string>
     <string name="micloud_user_name">Nome utente</string>
     <string name="micloud_user_nick_name">Nickname</string>
-    <string name="micloud_user_id">MiAccount ID</string>
+    <string name="micloud_user_id">ID account Mi</string>
     <string name="micloud_account_details">Dettagli account</string>
     <string name="internet_comm">Servizi di messaggistica</string>
     <string name="cloud_messaging">Messaggi Wi-Fi</string>
@@ -273,10 +273,10 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="bind_settings">Collegamenti</string>
     <string name="cloud_service">Servizio cloud</string>
     <string name="account_bind_settings">Collega account</string>
-    <string name="account_bind_devices">Signed-in devices</string>
+    <string name="account_bind_devices">Dispositivi associati</string>
     <string name="account_dspt_provision">Utilizza un solo account per tutti i nostri prodotti.</string>
     <string name="find_device_dspt">Blocca o cancella questo dispositivo da remoto.</string>
-    <string name="login_title">Accedi al tuo Mi account</string>
+    <string name="login_title">Accedi al tuo account Mi</string>
     <string name="login_step2_title">Accedi in modo protetto</string>
     <string name="micloud_user_space_title">Spazio di archiviazione</string>
     <string name="micloud_welcome_skip_login_provision"><u>Salta</u></string>
@@ -295,12 +295,12 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="change_account"><u>Cambia account</u></string>
     <string name="register_account_verified_confirm">Già attivato</string>
     <string name="register_account_goto_email">Vai nella tua casella di posta</string>
-    <string name="account_xiaomi_service">Services</string>
-    <string name="account_settings">Account settings</string>
-    <string name="opening_page">Opening…</string>
-    <string name="barcode_add_account_prompt">To add an account, scan the QR code again after you sign in.</string>
-    <string name="scan_barcode_title">Login safely Xiaomi Account, by scanning the QR code from the web page or TV</string>
-    <string name="micloud_sync_info">There are %d items to be synced</string>
-    <string name="micloud_sync_info_synced">All items are up to date</string>
-    <string name="micloud_space_info">Remain:%s</string>
+    <string name="account_xiaomi_service">Servizi</string>
+    <string name="account_settings">Impostazioni account</string>
+    <string name="opening_page">Apertura…</string>
+    <string name="barcode_add_account_prompt">"Per aggiungere un account, scansiona il codice QR di nuovo dopo aver eseguito l'accesso."</string>
+    <string name="scan_barcode_title">"Esegui l'accesso sicuro all'account Xiaomi, scansioando il codice QR dalla pagina web o dalla TV"</string>
+    <string name="micloud_sync_info">Ci sono %d contenuti da sincronizzare</string>
+    <string name="micloud_sync_info_synced">Tutti i contenuti sono aggiornati</string>
+    <string name="micloud_space_info">Rimanente: %s</string>
 </resources>
