--- a/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
@@ -622,8 +622,8 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_setting_switch_entryvalue_on">on</string>
     <string name="pref_video_speed_fast_title">Veloce</string>
     <string name="pref_video_speed_slow_title">Lento</string>
-    <string name="pref_camera_countdown_title">Conto alla rovescia</string>
-    <string name="simple_mode_button_text_countdown">Chiudi conto alla rovescia</string>
+    <string name="pref_camera_countdown_title">Autoscatto</string>
+    <string name="simple_mode_button_text_countdown">Chiudi autoscatto</string>
     <string name="effect_setting_top_text">Filtri fotocamera</string>
     <string name="pref_camera_settings">Impostazioni dispositivo</string>
     <string name="pref_capture_settings">Impostazioni fotocamera</string>
